# browser-use-hotel

./: .gitignore  README.md
docs/: browser-agent-training.md  product-design-browser-agent-workbench.md  research-browser-use-ecosystem.md  research-browser-use.md  research-gui-agent-trends.md  research-midscene.md  research-mobile-agent.md
docs/superpowers/plans/: 2026-03-19-hotel-compare-web-deploy.md  2026-03-19-hotel-compare.md
hotel-compare/: README.md
hotel-compare/browser-use-version/: .dockerignore  .env.example  .gitignore  Dockerfile  agent_factory.py  app.py  context_store.py  hotel_compare.py  platform_config.py  pyproject.toml  reflection.py  requirements.txt  retry_strategies.py  supabase_client.py  test_local_agent.py  worker.py
hotel-compare/browser-use-version/tests/: conftest.py  test_callbacks.py  test_parse_hotel_price.py  test_platform_config.py  test_reflection.py  test_supabase_client.py
hotel-compare/page-agent-version/: background.js  content.js  manifest.json  popup.html  popup.js  supabase-bridge.js
hotel-compare/page-agent-version/lib/: page-agent.iife.js
hotel-compare/supabase/migrations/: 001_init.sql  002_rich_progress.sql  003_retry_tracking.sql  004_operation_context.sql  005_dual_engine.sql
hotel-compare/web/: package-lock.json  package.json
hotel-compare/web/app/: globals.css  layout.tsx  page.tsx
hotel-compare/web/components/: BootAnimation.tsx  ComparisonTable.tsx  DualEngineView.tsx  EngineComparisonTable.tsx  PlatformCard.tsx  SearchForm.tsx  StepDetailPanel.tsx  StepTimeline.tsx
hotel-compare/web/lib/: types.ts  (+1 more)
