[project]
name = "hotel-compare"
version = "0.1.0"
description = "Hotel price comparison using browser-use agent"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.12.0",
    "langchain-openai",
    "streamlit",
    "python-dotenv",
    "playwright>=1.58.0",
    "httpx[socks]>=0.28.1",
    "supabase>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
